data/derived/fa15/progs/unify/prog1848.ml.out
Characters 45-54:
  else x::(clone x n-1);;
           ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
